# udpcp

./: .markdownlint.yaml  Cargo.toml  LICENSE  README.md  deny.toml  justfile  test_container.sh
.github/workflows/: audit.yml  coverage-baseline.yml  coverage-comment.yml  integration.yml  lint-commits.yml  lint-md.yml  lint-shell.yml  lint-spelling.yml  lint-workflows.yml  lint.yml  release.yml  test.yml
scripts/: netem-tests.sh
src/: cli.rs  jsonl_reporter.rs  main.rs  text_reporter.rs
src/lib/: mod.rs  protocol.rs  recv.rs  report.rs  send.rs
tests/: cli.rs  signal.rs  transfer.rs
